# sql-generate-app

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .secrets.toml  Dockerfile  alembic.ini  main.py  pyproject.toml  settings.prod.toml  settings.toml
backend/api/: __init__.py  query.py  report.py
backend/api/auth/: user.py
backend/api/data_source/: __init__.py  data_source.py
backend/api/middlewares/: auth.py
backend/lib/: __init__.py  __settings__.py  app.py  exceptions.py
backend/lib/data_sources/: __init__.py  base.py  mysql.py  postgresql.py
backend/lib/database/: __init__.py  engine.py  exceptions.py  migration.py  orm.py
backend/lib/query/: __init__.py  expression.py  operator.py  query.py  query_helper.py  query_manager.py  where_clause.py
backend/migrations/versions/: 0d12e5fe0cc6_add_is_default_column_to_datasource_.py  b261f7e70473_add_sql_enum_type_to_reportype.py
backend/models/: __init__.py  base.py  data_source.py  report.py
backend/models/auth/: __init__.py  user.py
backend/schemas/auth/: __init__.py  user.py
backend/services/auth/: __init__.py  user.py
backend/services/data_source/: dto.py  service.py
backend/services/query/: __init__.py  dto.py  query.py  report_type_factory.py
backend/services/report/: dto.py  service.py
backend/utils/exceptions/: __init__.py
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  package.json  tailwind.config.ts
frontend/app/: layout.tsx  providers.tsx  store.tsx
frontend/services/: auth.ts  base.ts  data_source.ts  query.ts  report.ts
(+100 files in other folders)
